[package]
name = "chime"
description = "WIP library for continuous, predictable, mutable change over time"
repository = "https://github.com/Yokinman/chime"
authors = ["Yokin"]
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = []
categories = ["mathematics", "game-development", "simulation"]

[dependencies]
#chime-flux-proc-macro = "0.3.0"
chime-flux-proc-macro = { path = "flux-proc-macro" }
glam = { version = "0.29", optional = true }
bevy_ecs = { version = "0.15", optional = true }
bevy_time = { version = "0.15", optional = true }
lambert_w = "1.0.3"
symb_poly = { path = "../symb_poly_prototype" }
num-traits = "0.2.19"
typenum = "1.17.0"

[features]
glam = ["dep:glam"]
bevy = ["dep:bevy_ecs", "dep:bevy_time", "glam"]
