[package]
name = "chime-flux-proc-macro"
description = "macro for chime crate"
repository = "https://github.com/Yokinman/chime"
authors = ["Yokin"]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
